[gd_scene load_steps=18 format=2]

[ext_resource path="res://level/combobar/ComboBar.gd" type="Script" id=1]
[ext_resource path="res://level/combobar/SaleManager.gd" type="Script" id=2]
[ext_resource path="res://level/combobar/background.png" type="Texture" id=3]
[ext_resource path="res://hud/fishsymbols.png" type="Texture" id=4]
[ext_resource path="res://sfx/coinsJohn/1.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/coinsJohn/2.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/coinsJohn/3.wav" type="AudioStream" id=7]
[ext_resource path="res://sfx/coinsJohn/4.wav" type="AudioStream" id=8]
[ext_resource path="res://sfx/coinsJohn/5.wav" type="AudioStream" id=9]
[ext_resource path="res://sfx/coins/coins1.wav" type="AudioStream" id=10]
[ext_resource path="res://sfx/coins/coins2.wav" type="AudioStream" id=11]
[ext_resource path="res://sfx/coins/coins3.wav" type="AudioStream" id=12]
[ext_resource path="res://sfx/coins/coins_complete.wav" type="AudioStream" id=13]
[ext_resource path="res://sfx/coinsJohn/combo_success.wav" type="AudioStream" id=14]
[ext_resource path="res://sfx/coinsJohn/combo_fail.wav" type="AudioStream" id=15]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.262745, 0.694118, 0.494118, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.196078, 0.439216, 0.701961, 1 )
border_color = Color( 0.0745098, 0.219608, 0.384314, 1 )

[node name="ComboBar" type="Node2D" groups=[
"combobar",
]]
script = ExtResource( 1 )

[node name="SaleManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="SaleManager"]
wait_time = 20.0
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="ColorTween" type="Tween" parent="."]

[node name="Bar" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="Bar"]
texture = ExtResource( 3 )
hframes = 4

[node name="FishIcons" type="Node2D" parent="Bar"]

[node name="Fish" type="Sprite" parent="Bar/FishIcons"]
position = Vector2( -14, 5 )
texture = ExtResource( 4 )
hframes = 10

[node name="Fish2" type="Sprite" parent="Bar/FishIcons"]
position = Vector2( 0, 5 )
texture = ExtResource( 4 )
hframes = 10

[node name="Fish3" type="Sprite" parent="Bar/FishIcons"]
position = Vector2( 14, 5 )
texture = ExtResource( 4 )
hframes = 10
frame = 9

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -24.0
margin_top = -20.0
margin_right = 23.0
margin_bottom = -6.0
rect_scale = Vector2( 1, 0.25 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false

[node name="Sounds" type="Node2D" parent="."]

[node name="Combo" type="Node2D" parent="Sounds"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Sounds/Combo"]
stream = ExtResource( 5 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Sounds/Combo"]
stream = ExtResource( 6 )

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="Sounds/Combo"]
stream = ExtResource( 7 )

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="Sounds/Combo"]
stream = ExtResource( 8 )

[node name="AudioStreamPlayer2D5" type="AudioStreamPlayer2D" parent="Sounds/Combo"]
stream = ExtResource( 9 )
attenuation = 0.353553

[node name="Coin" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 10 )
volume_db = -12.0

[node name="Coin2" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 11 )
volume_db = -12.0

[node name="Coin3" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 12 )
volume_db = -12.0

[node name="CoinComplete" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 13 )
volume_db = -12.0

[node name="ComboComplete" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 14 )
attenuation = 0.101532

[node name="ComboFail" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 15 )
attenuation = 0.101532

[connection signal="timeout" from="SaleManager/Timer" to="SaleManager" method="_on_Timer_timeout"]
